--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -8,12 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Cache dependencies 
         uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: deps-node-modules-${{hashFiles('**/package.lock.json')}}
+          key: deps-node-modules-${{hashFiles('**/package-lock.json')}}
       - name: Install dependencies
         run: npm ci
       - name: Lint code
@@ -27,7 +27,7 @@ jobs:
       script-file: ${{steps.publish.outputs.script-file}}
     steps:
       - name: Get code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Cache dependencies 
         uses: actions/cache@v3
         with:
